# samftp_cli

./: .cursorrules  .env.example  .gitignore  AGENTS.md  CLAUDE.md  FLUTTER_MIGRATION_GUIDE.md  README.md  install.bat  install.sh  install_linux  install_macos  install_windows.bat  pyproject.toml  requirements.txt  samftp
src/samftp_cli/: bookmarks.py  cache.py  config.py  data_models.py  ftp_client.py  main.py  player.py  tui.py  ui.py
