[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "samftp-cli"
version = "0.1.0"
description = "A CLI to browse and play media from SAM-FTP servers."
authors = [
    { name = "Masnun Siam", email = "echo@msiamn.dev" }
]
dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "python-dotenv>=0.21.0",
    "pyfzf>=0.2.2",
    "rich>=13.0.0",
    "textual>=0.50.0",
    "aiohttp>=3.9.0",
    "click>=8.1.0",
    "aiofiles>=23.0.0",
    "platformdirs>=4.0.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
samftp = "samftp_cli.main:cli"
samftp-tui = "samftp_cli.main:tui_entry"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/samftp_cli"] 
